--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".tempDisplayPage"></activity>
+        <activity android:name=".Display_Page"></activity>
+        <activity android:name=".tempDisplayPage" />
         <activity android:name=".CreateAccountActivity" />
         <activity android:name=".loginPage" />
         <activity android:name=".MainActivity">
