--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,21 +9,27 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".EditAccountPage"></activity>
+        <activity android:name=".EditAccountLogin" />
         <activity android:name=".AdminEditActivity" />
         <activity android:name=".AdminActivity" />
         <activity android:name=".Display_Page" />
-        <activity android:name=".tempDisplayPage"
-            android:parentActivityName=".MainActivity"
-            android:label="Details"/>
-        <activity android:name=".CreateAccountActivity"
-            android:parentActivityName=".MainActivity"
-            android:label="Details"/>
-        <activity android:name=".loginPage"
-            android:parentActivityName=".MainActivity"
-            android:label="Details"/>
-        <activity android:name=".MainActivity"
-            android:parentActivityName=".MainActivity"
-            android:label="Details">
+        <activity
+            android:name=".tempDisplayPage"
+            android:label="Details"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".CreateAccountActivity"
+            android:label="Details"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".loginPage"
+            android:label="Details"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".MainActivity"
+            android:label="Details"
+            android:parentActivityName=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
